fixed h-screen issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer components {
+    .h-screen-withmobile {
+        @apply h-screen h-[100dvh] lg:h-screen
+    }
+
     .btn-primary {
         @apply rounded-md border border-transparent drop-shadow-sm shadow-sm bg-blue-600 py-2 px-5 text-center font-medium text-white tracking-wide shadow-sm hover:bg-indigo-700 focus:bg-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition duration-300 ease-out
     }
